--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import './base/reset.scss';
-@import './base/reset.scss';
+@import './base/fonts.scss';
 @import './modules/variables.scss';
 @import './modules/mixin.scss';
 @import './modules/private.scss';
 @import './main.scss/main.scss';
+@import './main.scss/banner-sec.scss';
