--- a/styles/style.css
+++ b/styles/style.css
@@ -1,99 +1,1 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline; }
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-  display: block; }
-
-body {
-  line-height: 1; }
-
-ol, ul {
-  list-style: none; }
-
-blockquote, q {
-  quotes: none; }
-
-blockquote:before, blockquote:after {
-  content: '';
-  content: none; }
-
-q:before, q:after {
-  content: '';
-  content: none; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-* {
-  box-sizing: border-box; }
-
-a {
-  text-decoration: none;
-  color: inherit; }
-
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline; }
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-  display: block; }
-
-body {
-  line-height: 1; }
-
-ol, ul {
-  list-style: none; }
-
-blockquote, q {
-  quotes: none; }
-
-blockquote:before, blockquote:after {
-  content: '';
-  content: none; }
-
-q:before, q:after {
-  content: '';
-  content: none; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-* {
-  box-sizing: border-box; }
-
-a {
-  text-decoration: none;
-  color: inherit; }
-
-.sec-01 .container {
-  max-width: 1170px;
-  width: 100%;
-  margin: 0 auto; }
-
-.sec-01 {
-  background-color: red;
-  padding-top: 50px; }
-  .sec-01 .container {
-    display: flex;
-    justify-content: space-around; }
+a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before{content:'';content:none}q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}*{box-sizing:border-box}a{text-decoration:none;color:inherit;display:block}img{display:block}body{background-color:#000}button,input,textarea{outline:0;border:0;resize:none}@font-face{font-family:Poppins-extrabold;src:url(../fonts/Poppins-ExtraBold.eot);src:url(../fonts/Poppins-ExtraBold.eot?#iefix) format("embedded-opentype"),url(../fonts/Poppins-ExtraBold.woff2) format("woff2"),url(../fonts/Poppins-ExtraBold.woff) format("woff"),url(../fonts/Poppins-ExtraBold.ttf) format("truetype"),url(../fonts/Poppins-ExtraBold.svg#Poppins-ExtraBold) format("svg");font-weight:800;font-style:normal;font-display:swap}@font-face{font-family:Poppins-medium;src:url(../fonts/Poppins-Medium.eot);src:url(../fonts/Poppins-Medium.eot?#iefix) format("embedded-opentype"),url(../fonts/Poppins-Medium.woff2) format("woff2"),url(../fonts/Poppins-Medium.woff) format("woff"),url(../fonts/Poppins-Medium.ttf) format("truetype"),url(../fonts/Poppins-Medium.svg#Poppins-Medium) format("svg");font-weight:500;font-style:normal;font-display:swap}@font-face{font-family:Poppins-regular;src:url(../fonts/Poppins-Regular.eot);src:url(../fonts/Poppins-Regular.eot?#iefix) format("embedded-opentype"),url(../fonts/Poppins-Regular.woff2) format("woff2"),url(../fonts/Poppins-Regular.woff) format("woff"),url(../fonts/Poppins-Regular.ttf) format("truetype"),url(../fonts/Poppins-Regular.svg#Poppins-Regular) format("svg");font-weight:400;font-style:normal;font-display:swap}.banner-section,.banner-section .btn-wrapper,.header-section{max-width:1270px;width:100%;margin:0 auto}.header-section{display:flex;justify-content:space-between;align-items:center}.header-section .logo{max-width:190px;width:100%}.header-section .logo .logo-img{width:100%}.header-section .navbar .nav-ul{display:flex;justify-content:space-between;align-items:center}.header-section .navbar .nav-ul .nav-li{color:#fff;font-family:Poppins-medium;font-size:18px;width:120px;height:120px;text-transform:capitalize;display:flex;justify-content:center;transition:all .1s linear .1s}.header-section .navbar .nav-ul .nav-li:first-child{background-color:#ff4900}.header-section .navbar .nav-ul .nav-li:hover{background-color:#ff4900}.header-section .navbar .nav-ul .nav-li .nav-a{align-self:center}.header-section .navbar .nav-ul .btn-header{max-width:150px;width:100%;height:67px;margin-left:30px;border-radius:10px;background-color:#ff4900;color:#fff;font-size:18px;font-family:Poppins-regular;cursor:pointer;transition:all .2s linear .2s}.header-section .navbar .nav-ul .btn-header:hover{background-color:grey;color:#000}.banner-section{display:flex;justify-content:space-between;align-items:center}.banner-section .left-block{max-width:642px;width:100%;margin-top:200px}.banner-section .left-block .childe-box-01{max-width:200px;width:100%;height:65px;font-size:22px;font-family:Poppins-medium;color:#fff;background-color:#ff4900;text-transform:capitalize;transition:all .2s ease-in .1s;cursor:pointer}.banner-section .left-block .childe-box-01:hover{background-color:grey;color:#000}.banner-section .left-block .childe-box-01 .arr{font-size:20px;color:#fff;margin-left:10px}.banner-section .left-block .mr-h3{font-size:50px;font-family:Poppins-extrabold;color:#fff;cursor:default;margin:20px 0}.banner-section .left-block .prof-p{font-family:Poppins-medium;font-size:22px;color:#fff}.banner-section .left-block .left-firschild{max-width:520px;width:100%;margin-top:67px;display:flex;justify-content:space-between;align-items:center}.banner-section .left-block .left-firschild .left-btn{max-width:250px;width:100%;height:80px;background-color:#ff4900;border-radius:10px;color:#fff;font-family:Poppins-medium;font-size:22px;cursor:pointer;transition:all .1s linear .2s}.banner-section .left-block .left-firschild .left-btn:hover{background-color:grey;color:#000;-webkit-box-reflect:below 1px linear-gradient(transparent,rgba(255,255,255,.4))}.banner-section .left-block .left-firschild .left-01btn{max-width:250px;width:100%;height:80px;background:0 0;border-radius:10px;color:#fff;font-family:Poppins-medium;font-size:22px;cursor:pointer;border:2px solid #fff;transition:all .1s linear .2s}.banner-section .left-block .left-firschild .left-01btn:hover{background-color:#ff4900;border:transparent;-webkit-box-reflect:below 1px linear-gradient(transparent,rgba(255,255,255,.4))}.banner-section .right-block{max-width:650px;width:100%;margin-top:60px;border:3px solid #fff;border-radius:15px}.banner-section .right-block .right-img{width:100%;filter:blur(.5px);transition:all .1s linear .2s}.banner-section .right-block .right-img:hover{filter:blur(0);background:linear-gradient(red,#ff0,green);-webkit-box-reflect:below 2px rgba(255,255,255,.3)}
