--- a/scss/base/reset.scss
+++ b/scss/base/reset.scss
@@ -42,4 +42,16 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
  a{
      text-decoration: none;
      color: inherit;
+     display: block;
  }   
+ img{
+   display: block;
+ }
+body{
+  background-color: #000000;
+}
+button,textarea,input{
+  outline: 0;
+  border: 0;
+  resize: none;
+}
