--- a/scss/main.scss/main.scss
+++ b/scss/main.scss/main.scss
@@ -1,10 +1,53 @@
-.sec-01{
-    background-color: $color-01;
-    padding-top: $size-01;
-     .container{
-         @extend
-            %size-class;
-         display: flex;
-         justify-content: space-around;
-     }
+.header-section{
+    @extend %size-class;
+    @include d-flex (flex,space-between,center);
+    .logo{
+        max-width: 190px;
+        width: 100%;
+        .logo-img{
+            width: 100%;
+        }
+    }
+    .navbar{
+        .nav-ul{
+            @include d-flex(flex,space-between,center);
+            .nav-li{
+                color: $color-02;
+                font-family: 'Poppins-medium';
+                font-size: 18px;
+                width: 120px;
+                height: 120px;
+                text-transform: capitalize;
+                display: flex;
+                justify-content: center;
+                transition: all 0.1s linear 0.1s;
+                &:first-child{
+                    background-color: $color-01;
+                }
+                &:hover{
+                    background-color: $color-01;
+                }
+                .nav-a{
+                    align-self: center;
+                }
+            }
+            .btn-header{
+                max-width: 150px;
+                width: 100%;
+                height: 67px;
+                margin-left: 30px;
+                border-radius: 10px;
+                background-color: $color-01;
+                color: $color-02;
+                font-size: 18px;
+                font-family: 'Poppins-regular';
+                cursor: pointer;
+                transition: all 0.2s linear 0.2s;
+                &:hover{
+                    background-color: grey;
+                    color: black;
+                }
+            }
+        }
+    }
 }
