--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,3 +5,4 @@
 @import './modules/private.scss';
 @import './main.scss/main.scss';
 @import './main.scss/banner-sec.scss';
+@import './main.scss/header-resp.scss';
