--- a/scss/modules/private.scss
+++ b/scss/modules/private.scss
@@ -3,3 +3,9 @@
     width: 100%;
     margin: 0 auto;
 }
+%size-class-02{
+    max-width: 1270px;
+    width: 100%;
+    margin: 0 auto;
+    // padding: 0 30px;
+}
