end of header responsive

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,3 +6,4 @@
 @import './main.scss/main.scss';
 @import './main.scss/banner-sec.scss';
 @import './main.scss/header-resp.scss';
+@import './main.scss/section-01.scss';
