--- a/scss/main.scss/header-resp.scss
+++ b/scss/main.scss/header-resp.scss
@@ -227,5 +227,526 @@
     }
 }
 @media(max-width:940px){
-    
+    .banner-section{
+        .left-block{
+            max-width: 370px;
+            .childe-box-01{
+                max-width: 110px;
+                font-size: 13px;
+                .arr{
+                    font-size: 14px;
+                }
+            }
+            .mr-h3{
+                font-size: 31px;
+            }
+            .prof-p{
+                font-size: 14px;
+            }
+            .left-firschild{
+                margin-top: 50px;
+                max-width: 320px;
+                .left-btn,
+                .left-01btn{
+                    max-width: 150px;
+                    font-size: 14px;
+                }
+            }
+        }
+        .right-block{
+            margin-top: 130px;
+            max-width: 470px;
+            
+        }
+    }
+}
+@media(max-width:880px){
+    .banner-section{
+        margin-top: 50px;
+        .left-block{
+            max-width: 350px;
+            .childe-box-01{
+                max-width: 120px;
+                font-size: 13px;
+                .arr{
+                    font-size: 14px;
+                }
+            }
+            .mr-h3{
+                font-size: 31px;
+            }
+            .prof-p{
+                font-size: 13px;
+            }
+            .left-firschild{
+                margin-top: 50px;
+                max-width: 300px;
+                .left-btn,
+                .left-01btn{
+                    max-width: 140px;
+                    font-size: 14px;
+                }
+            }
+        }
+        .right-block{
+            margin-top: 170px;
+            max-width: 450px;
+            
+        }
+    }
+}
+
+
+@media(max-width:850px){
+    .banner-section{
+        .left-block{
+            max-width: 350px;
+            .childe-box-01{
+                max-width: 110px;
+                font-size: 13px;
+                .arr{
+                    font-size: 14px;
+                }
+            }
+            .mr-h3{
+                font-size: 31px;
+            }
+            .prof-p{
+                font-size: 13px;
+            }
+            .left-firschild{
+                margin-top: 50px;
+                max-width: 300px;
+                .left-btn,
+                .left-01btn{
+                    max-width: 140px;
+                    font-size: 14px;
+                    height: 60px;
+                }
+            }
+        }
+        .right-block{
+            max-width: 450px;
+            
+        }
+    }
+}
+@media(max-width:820px){
+    .banner-section{
+        .left-block{
+            max-width: 330px;
+            .childe-box-01{
+                max-width: 110px;
+                font-size: 13px;
+                height: 55px;
+                .arr{
+                    font-size: 14px;
+                }
+            }
+            .mr-h3{
+                font-size: 29px;
+            }
+            .prof-p{
+                font-size: 12px;
+            }
+            .left-firschild{
+                margin-top: 40px;
+                max-width: 300px;
+                .left-btn,
+                .left-01btn{
+                    max-width: 140px;
+                    font-size: 14px;
+                    height: 60px;
+                }
+            }
+        }
+        .right-block{
+            max-width: 420px;
+            
+        }
+    }
+}
+@media(max-width:780px){
+    .banner-section{
+        .left-block{
+            max-width: 300px;
+            .childe-box-01{
+                max-width: 100px;
+                font-size: 12px;
+                height: 55px;
+                .arr{
+                    font-size: 12px;
+                    margin-left: 5px;
+                }
+            }
+            .mr-h3{
+                font-size: 25px;
+            }
+            .prof-p{
+                font-size: 11px;
+            }
+            .left-firschild{
+                margin-top: 45px;
+                max-width: 270px;
+                .left-btn,
+                .left-01btn{
+                    max-width: 130px;
+                    font-size: 14px;
+                    height: 60px;
+                }
+            }
+        }
+        .right-block{
+            max-width: 400px;
+            
+        }
+    }
+}
+@media(max-width:740px){
+    .banner-section{
+        .left-block{
+            max-width: 300px;
+            .childe-box-01{
+                max-width: 110px;
+                font-size: 13px;
+                height: 55px;
+                .arr{
+                    font-size: 14px;
+                }
+            }
+            .mr-h3{
+                font-size: 25px;
+            }
+            .prof-p{
+                font-size: 11px;
+            }
+            .left-firschild{
+                margin-top: 40px;
+                max-width: 270px;
+                .left-btn,
+                .left-01btn{
+                    max-width: 130px;
+                    font-size: 13px;
+                    height: 60px;
+                }
+            }
+        }
+        .right-block{
+            max-width: 380px;
+            
+        }
+    }
+}
+@media(max-width:700px){
+    .banner-section{
+        .left-block{
+            max-width: 270px;
+            .childe-box-01{
+                max-width: 100px;
+                font-size: 12px;
+                height: 50px;
+                .arr{
+                    font-size: 13px;
+                }
+            }
+            .mr-h3{
+                font-size: 22px;
+            }
+            .prof-p{
+                font-size: 10px;
+            }
+            .left-firschild{
+                margin-top: 35px;
+                max-width: 250px;
+                .left-btn,
+                .left-01btn{
+                    max-width: 120px;
+                    font-size: 13px;
+                    height: 55px;
+                }
+            }
+        }
+        .right-block{
+            max-width: 350px;
+            
+        }
+    }
+}
+@media(max-width:670px){
+    .banner-section{
+        display: flex;
+        flex-direction: column-reverse;
+        .left-block{
+            max-width: 500px;
+            .childe-box-01{
+                max-width: 150px;
+                font-size: 16px;
+                height: 65px;
+                .arr{
+                    font-size: 16px;
+                }
+            }
+            .mr-h3{
+                font-size: 40px;
+            }
+            .prof-p{
+                font-size: 18px;
+            }
+            .left-firschild{
+                margin-top: 50px;
+                max-width: 370px;
+                .left-btn,
+                .left-01btn{
+                    max-width: 170px;
+                    font-size: 17px;
+                    height: 70px;
+                }
+            }
+        }
+        .right-block{
+            max-width: 500px;
+            
+            
+        }
+    }
+}
+@media(max-width:580px){
+    .banner-section{
+        display: flex;
+        flex-direction: column-reverse;
+        .left-block{
+            max-width: 430px;
+            .childe-box-01{
+                max-width: 150px;
+                font-size: 16px;
+                height: 65px;
+                .arr{
+                    font-size: 16px;
+                }
+            }
+            .mr-h3{
+                font-size: 35px;
+            }
+            .prof-p{
+                font-size: 16px;
+            }
+            .left-firschild{
+                margin-top: 50px;
+                max-width: 370px;
+                .left-btn,
+                .left-01btn{
+                    max-width: 170px;
+                    font-size: 17px;
+                    height: 70px;
+                }
+            }
+        }
+        .right-block{
+            max-width: 430px;
+            
+        }
+    }
+}
+@media(max-width:520px){
+    .header-section{
+        .logo{
+            max-width: 160px;
+        }
+        .navbar{
+            .nav-ul{
+                .nav-li{
+                    height: 70px;
+                }
+                .btn-header{
+                    max-width: 130px;
+                    font-size: 12px;
+                    height: 55px;
+                }
+                .fa-bars{
+                    font-size: 30px;
+                }
+            }
+        }
+    }
+}
+@media(max-width:470px){
+    .header-section{
+        .logo{
+            max-width: 130px;
+        }
+        .navbar{
+            .nav-ul{
+                .nav-li{
+                    height: 70px;
+                }
+                .btn-header{
+                    max-width: 120px;
+                    font-size: 10px;
+                    height: 40px;
+                }
+                .fa-bars{
+                    font-size: 25px;
+                    &:hover{
+                        font-size: 30px;
+                    }
+                }
+            }
+        }
+    }
+    .banner-section{
+        display: flex;
+        flex-direction: column-reverse;
+        .left-block{
+            max-width: 400px;
+            .childe-box-01{
+                max-width: 130px;
+                font-size: 14px;
+                height: 60px;
+                .arr{
+                    font-size: 14px;
+                }
+            }
+            .mr-h3{
+                font-size: 25px;
+            }
+            .prof-p{
+                font-size: 13px;
+            }
+            .left-firschild{
+                margin-top: 50px;
+                max-width: 300px;
+                .left-btn,
+                .left-01btn{
+                    max-width: 140px;
+                    font-size: 15px;
+                    height: 60px;
+                }
+            }
+        }
+        .right-block{
+            max-width: 400px;
+            
+        }
+    }
+}
+@media(max-width:400px){
+    .header-section{
+        .logo{
+            max-width: 100px;
+        }
+        .navbar{
+            .nav-ul{
+                .nav-li{
+                    height: 70px;
+                }
+                .btn-header{
+                    max-width: 120px;
+                    font-size: 10px;
+                    height: 40px;
+                }
+                .fa-bars{
+                    font-size: 20px;
+                    &:hover{
+                        font-size: 25px;
+                    }
+                }
+            }
+        }
+    }
+    .banner-section{
+        display: flex;
+        flex-direction: column-reverse;
+        .left-block{
+            max-width: 350px;
+            .childe-box-01{
+                max-width: 110px;
+                font-size: 12px;
+                height: 50px;
+                .arr{
+                    font-size: 12px;
+                }
+            }
+            .mr-h3{
+                font-size: 20px;
+            }
+            .prof-p{
+                font-size: 11px;
+            }
+            .left-firschild{
+                margin-top: 40px;
+                max-width: 270px;
+                .left-btn,
+                .left-01btn{
+                    max-width: 130px;
+                    font-size: 13px;
+                    height: 50px;
+                }
+            }
+        }
+        .right-block{
+            max-width: 350px;
+            
+        }
+    }
+}
+@media(max-width:350px){
+    .header-section{
+        .logo{
+            max-width: 90px;
+        }
+        .navbar{
+            .nav-ul{
+                .nav-li{
+                    height: 50px;
+                }
+                .btn-header{
+                    max-width: 110px;
+                    font-size: 7px;
+                    height: 40px;
+                }
+                .fa-bars{
+                    font-size: 18px;
+                    margin:0 5px;
+                    &:hover{
+                        font-size: 20px;
+                    }
+                }
+            }
+        }
+    }
+    .banner-section{
+        display: flex;
+        flex-direction: column-reverse;
+        .left-block{
+            max-width: 300px;
+            .childe-box-01{
+                max-width: 100px;
+                font-size: 11px;
+                height: 45px;
+                .arr{
+                    font-size: 11px;
+                }
+            }
+            .mr-h3{
+                font-size: 18px;
+            }
+            .prof-p{
+                font-size: 9px;
+            }
+            .left-firschild{
+                margin-top: 40px;
+                max-width: 230px;
+                .left-btn,
+                .left-01btn{
+                    max-width: 110px;
+                    font-size: 12px;
+                    height: 50px;
+                }
+            }
+        }
+        .right-block{
+            max-width: 300px;
+            
+        }
+    }
 }
