end section-01 responsive

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,3 +7,4 @@
 @import './main.scss/banner-sec.scss';
 @import './main.scss/header-resp.scss';
 @import './main.scss/section-01.scss';
+@import './main.scss/section-01-resp.scss'
