--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,4 +7,6 @@
 @import './main.scss/banner-sec.scss';
 @import './main.scss/header-resp.scss';
 @import './main.scss/section-01.scss';
-@import './main.scss/section-01-resp.scss'
+@import './main.scss/section-01-resp.scss';
+@import './main.scss/section-02.scss';
+@import './main.scss/sec-02-resp.scss';
