--- a/scss/base/reset.scss
+++ b/scss/base/reset.scss
@@ -50,7 +50,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 body{
   background-color: #000000;
 }
-button,textarea,input{
+button,textarea,input:focus{
   outline: 0;
   border: 0;
   resize: none;
