--- a/scss/main.scss/sec-02-resp.scss
+++ b/scss/main.scss/sec-02-resp.scss
@@ -1009,4 +1009,723 @@
         }
     }
 }
-@media(max-width:790px)
+@media(max-width:790px){
+    .section-02{
+        .sec-02-title{
+            .sec-title-01{
+                font-size: 22px;
+            }
+            .sec-02-p,
+            .sec-02-p1{
+                max-width: 1202px;
+                font-size: 14px;
+                text-align: center;
+            }
+        }
+    }
+    .sec-02{
+        .div-wrapper{
+            .firs-btn{
+                max-width: 220px;
+                font-size: 13px;
+                height: 90px;
+                .fa-wordpress-simple{
+                    font-size: 30px;
+                    margin: 0 10px;
+                }
+                .arrow-02{
+                    font-size: 22px;
+                    padding-left: 60px;
+                }
+            }
+            .second-btn{
+                max-width: 220px;
+                font-size: 15px;
+                height: 90px;
+                .fa-html5{
+                    font-size: 35px;
+                    margin: 0 20px;
+                }
+                .arrow-03{
+                    font-size: 27px;
+                    padding-left: 70px;
+                }
+            }
+            .therd-btn{
+                max-width: 220px;
+                height: 90px;
+                font-size: 13px;
+                text-align: center;
+                .coder{
+                    font-size: 30px;
+                    margin: 0 15px;
+                }
+                .arrow-04{
+                    font-size: 25px;
+                    margin-right: 30px;
+                    
+                }
+            }
+            
+        }
+        .wrapper{
+            .firs-btn{
+                max-width: 220px;
+                height: 90px;
+                font-size: 15px;
+                .fa-css3-alt{
+                    font-size: 45px;
+                    margin: 0 10px;
+                }
+                .arrow-05{
+                    font-size: 23px;
+                    padding-left: 95px;
+                }
+            }
+            .second-btn{
+                max-width: 220px;
+                height: 90px;
+                font-size: 17px;
+                .coder{
+                    font-size: 35px;
+                    margin: 0 20px;
+                }
+                .arrow-06{
+                    font-size: 27px;
+                    padding-left: 55px;
+                }
+            }
+            .therd-btn{
+                max-width: 220px;
+                height: 90px;
+                font-size: 13px;
+                text-align: center;
+                .fa-times-circle{
+                    font-size: 44px;
+                    margin: 0 15px;
+                }
+                .arrow-07{
+                    font-size: 25px;
+                    margin-right: 5px;
+                }
+            }
+        }
+        .btn-pranet{
+            .btn-bottom{
+                max-width: 220px;
+                font-size: 20px;
+            }
+        }
+        .box-wrapper{
+            .first-box{
+                max-width: 160px;
+                height: 170px;
+                .firs-p{
+                    font-size: 25px;
+                }
+                .first-p-01{
+                    font-size: 22px;
+                }
+            }
+            .sec-box{
+                max-width: 160px;
+                height: 170px;
+                .sec-p{
+                    font-size: 25px;
+                }
+                .sec-p2{
+                    font-size: 22px;
+                }
+            }
+            .therd-box{
+                max-width: 160px;
+                height: 170px;
+                .therd-p{
+                    font-size: 27px;
+                }
+                .therd-p1{
+                    font-size: 22px;
+                }
+            }
+            .forth-box{
+                max-width: 160px;
+                height: 170px;
+                .forth-p{
+                   
+                    font-size: 30px;
+                }
+                .forth-p1{
+                    font-size: 15px;
+                }
+            }
+        }
+    }
+}
+@media(max-width:730px){
+    .section-02{
+        .sec-02-title{
+            .sec-title-01{
+                font-size: 22px;
+            }
+            .sec-02-p,
+            .sec-02-p1{
+                max-width: 1202px;
+                font-size: 14px;
+                text-align: center;
+            }
+        }
+    }
+    .sec-02{
+        .div-wrapper{
+            .firs-btn{
+                max-width: 200px;
+                font-size: 13px;
+                height: 90px;
+                .fa-wordpress-simple{
+                    font-size: 30px;
+                    margin: 0 10px;
+                }
+                .arrow-02{
+                    font-size: 22px;
+                    padding-left: 40px;
+                }
+            }
+            .second-btn{
+                max-width: 200px;
+                font-size: 15px;
+                height: 90px;
+                .fa-html5{
+                    font-size: 35px;
+                    margin: 0 20px;
+                }
+                .arrow-03{
+                    font-size: 27px;
+                    padding-left: 50px;
+                }
+            }
+            .therd-btn{
+                max-width: 200px;
+                height: 90px;
+                font-size: 11px;
+                text-align: center;
+                .coder{
+                    font-size: 30px;
+                    margin: 0 10px;
+                }
+                .arrow-04{
+                    font-size: 25px;
+                    margin-right: 30px;
+                    
+                }
+            }
+            
+        }
+        .wrapper{
+            .firs-btn{
+                max-width: 200px;
+                height: 90px;
+                font-size: 15px;
+                .fa-css3-alt{
+                    font-size: 40px;
+                    margin: 0 15px;
+                }
+                .arrow-05{
+                    font-size: 23px;
+                    padding-left: 75px;
+                }
+            }
+            .second-btn{
+                max-width: 200px;
+                height: 90px;
+                font-size: 17px;
+                .coder{
+                    font-size: 35px;
+                    margin: 0 20px;
+                }
+                .arrow-06{
+                    font-size: 27px;
+                    padding-left: 40px;
+                }
+            }
+            .therd-btn{
+                max-width: 200px;
+                height: 90px;
+                font-size: 12px;
+                text-align: center;
+                .fa-times-circle{
+                    font-size: 40px;
+                    margin: 0 15px;
+                }
+                .arrow-07{
+                    font-size: 25px;
+                    margin-right: 5px;
+                }
+            }
+        }
+        .btn-pranet{
+            .btn-bottom{
+                max-width: 200px;
+                font-size: 20px;
+            }
+        }
+        .box-wrapper{
+            .first-box{
+                max-width: 150px;
+                height: 160px;
+                .firs-p{
+                    font-size: 20px;
+                }
+                .first-p-01{
+                    font-size: 20px;
+                }
+            }
+            .sec-box{
+                max-width: 150px;
+                height: 160px;
+                .sec-p{
+                    font-size: 22px;
+                }
+                .sec-p2{
+                    font-size: 20px;
+                }
+            }
+            .therd-box{
+                max-width: 150px;
+                height: 160px;
+                .therd-p{
+                    font-size: 25px;
+                }
+                .therd-p1{
+                    font-size: 20px;
+                }
+            }
+            .forth-box{
+                max-width: 150px;
+                height: 160px;
+                .forth-p{
+                   
+                    font-size: 30px;
+                }
+                .forth-p1{
+                    font-size: 14px;
+                    text-align: center;
+                }
+            }
+        }
+    }
+}
+@media(max-width:670px){
+    .section-02{
+        .sec-02-title{
+            .sec-title-01{
+                font-size: 22px;
+            }
+            .sec-02-p,
+            .sec-02-p1{
+                max-width: 1202px;
+                font-size: 14px;
+                line-height: 20px;
+                text-align: center;
+            }
+        }
+    }
+    .sec-02{
+        .div-wrapper{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .firs-btn{
+                max-width: 300px;
+                font-size: 19px;
+                height: 120px;
+                margin-bottom: 20px;
+                .fa-wordpress-simple{
+                    font-size: 60px;
+                    margin: 0 20px;
+                }
+                .arrow-02{
+                    font-size: 30px;
+                    padding-left: 40px;
+                }
+            }
+            .second-btn{
+                max-width: 300px;
+                font-size: 20px;
+                height: 120px;
+                margin-bottom: 20px;
+                .fa-html5{
+                    font-size: 60px;
+                    margin: 0 30px;
+                }
+                .arrow-03{
+                    font-size: 30px;
+                    padding-left: 90px;
+                }
+            }
+            .therd-btn{
+                max-width: 300px;
+                height: 120px;
+                font-size: 15px;
+                text-align: center;
+                .coder{
+                    font-size: 40px;
+                    margin: 0 20px;
+                }
+                .arrow-04{
+                    font-size: 27px;
+                    margin-left: 30px;
+                    
+                }
+            }
+            
+        }
+        .wrapper{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .firs-btn{
+                max-width: 300px;
+                height: 120px;
+                font-size: 18px;
+                margin-bottom: 20px;
+                .fa-css3-alt{
+                    font-size: 50px;
+                    margin: 0 20px;
+                }
+                .arrow-05{
+                    font-size: 27px;
+                    padding-left: 140px;
+                }
+            }
+            .second-btn{
+                max-width: 300px;
+                height: 120px;
+                font-size: 22px;
+                margin-bottom: 20px;
+                .coder{
+                    font-size: 45px;
+                    margin: 0 20px;
+                }
+                .arrow-06{
+                    font-size: 27px;
+                    padding-left: 110px;
+                }
+            }
+            .therd-btn{
+                max-width: 300px;
+                height: 120px;
+                font-size: 16px;
+                text-align: center;
+                .fa-times-circle{
+                    font-size: 50px;
+                    margin: 0 20px;
+                }
+                .arrow-07{
+                    font-size: 25px;
+                    margin-right: 10px;
+                }
+            }
+        }
+        .btn-pranet{
+            .btn-bottom{
+                max-width: 300px;
+                font-size: 22px;
+                height: 100px;
+            }
+        }
+        .box-wrapper{
+            display: flex;
+            flex-wrap: wrap;
+            .first-box{
+                max-width: 230px;
+                height: 190px;
+                margin-bottom: 40px;
+                .firs-p{
+                    font-size: 35px;
+                }
+                .first-p-01{
+                    font-size: 23px;
+                }
+            }
+            .sec-box{
+                max-width: 230px;
+                height: 190px;
+                .sec-p{
+                    font-size: 32px;
+                }
+                .sec-p2{
+                    font-size: 22px;
+                }
+            }
+            .therd-box{
+                max-width: 230px;
+                height: 190px;
+                .therd-p{
+                    font-size: 35px;
+                }
+                .therd-p1{
+                    font-size: 22px;
+                }
+            }
+            .forth-box{
+                max-width: 230px;
+                height: 190px;
+                .forth-p{
+                    font-size: 35px;
+                }
+                .forth-p1{
+                    font-size: 19px;
+                }
+            }
+        }
+    }
+}
+@media(max-width:530px){
+    .sec-02{
+        .box-wrapper{
+            .first-box{
+                max-width: 200px;
+            }
+            .sec-box{
+                max-width: 200px;
+            }
+            .therd-box{
+                max-width: 200px;
+            }
+            .forth-box{
+                max-width: 200px;
+            }
+        }
+    }
+}
+@media(max-width:470px){
+    .sec-02{
+        .box-wrapper{
+            .first-box{
+                max-width: 180px;
+            }
+            .sec-box{
+                max-width: 180px;
+            }
+            .therd-box{
+                max-width: 180px;
+            }
+            .forth-box{
+                max-width: 180px;
+                .forth-p1{
+                    font-size: 17px;
+                }
+            }
+        }
+    }
+}
+@media(max-width:430px){
+    .sec-02{
+        .box-wrapper{
+            .first-box{
+                max-width: 170px;
+            }
+            .sec-box{
+                max-width: 170px;
+            }
+            .therd-box{
+                max-width: 170px;
+            }
+            .forth-box{
+                max-width: 170px;
+                .forth-p1{
+                    font-size: 17px;
+                }
+            }
+        }
+    }
+}
+@media(max-width:410px){
+    .sec-02{
+        .box-wrapper{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .first-box{
+                max-width: 230px;
+            }
+            .sec-box{
+                max-width: 230px;
+                margin-bottom: 30px;
+            }
+            .therd-box{
+                max-width: 230px;
+                margin-bottom: 30px;
+            }
+            .forth-box{
+                max-width: 230px;
+                margin-bottom: 30px;
+                .forth-p1{
+                    font-size: 17px;
+                }
+            }
+        }
+    }
+}
+@media(max-width:370px){
+    .section-02{
+        .sec-02-title{
+            .sec-title-01{
+                font-size: 22px;
+            }
+            .sec-02-p,
+            .sec-02-p1{
+                max-width: 1202px;
+                font-size: 12px;
+                line-height: 20px;
+                text-align: center;
+            }
+        }
+    }
+    .sec-02{
+        .div-wrapper{
+            .firs-btn{
+                max-width: 260px;
+                font-size: 17px;
+                height: 110px;
+                margin-bottom: 20px;
+                .fa-wordpress-simple{
+                    font-size: 40px;
+                    margin: 0 20px;
+                }
+                .arrow-02{
+                    font-size: 25px;
+                    padding-left: 40px;
+                }
+            }
+            .second-btn{
+                max-width: 260px;
+                font-size: 20px;
+                height: 110px;
+                margin-bottom: 20px;
+                .fa-html5{
+                    font-size: 50px;
+                    margin: 0 20px;
+                }
+                .arrow-03{
+                    font-size: 30px;
+                    padding-left: 90px;
+                }
+            }
+            .therd-btn{
+                max-width: 260px;
+                height: 110px;
+                font-size: 13px;
+                text-align: center;
+                .coder{
+                    font-size: 40px;
+                    margin: 0 20px;
+                }
+                .arrow-04{
+                    font-size: 27px;
+                    margin-left:30px;
+                    padding: 0;
+                    
+                }
+            }
+            
+        }
+        .wrapper{
+            
+            .firs-btn{
+                max-width: 260px;
+                height: 110px;
+                font-size: 17px;
+                margin-bottom: 20px;
+                .fa-css3-alt{
+                    font-size: 40px;
+                    margin: 0 20px;
+                }
+                .arrow-05{
+                    font-size: 27px;
+                    padding-left: 110px;
+                }
+            }
+            .second-btn{
+                max-width: 260px;
+                height: 120px;
+                font-size: 22px;
+                margin-bottom: 20px;
+                .coder{
+                    font-size: 40px;
+                    margin: 0 20px;
+                }
+                .arrow-06{
+                    font-size: 27px;
+                    padding-left: 70px;
+                }
+            }
+            .therd-btn{
+                max-width: 260px;
+                height: 110px;
+                font-size: 14px;
+                text-align: center;
+                .fa-times-circle{
+                    font-size: 50px;
+                    margin: 0 20px;
+                }
+                .arrow-07{
+                    font-size: 25px;
+                    margin-right: 15px;
+                }
+            }
+        }
+        .btn-pranet{
+            .btn-bottom{
+                max-width: 260px;
+                font-size: 20px;
+                height: 100px;
+            }
+        }
+        .box-wrapper{
+            display: flex;
+            flex-wrap: wrap;
+            .first-box{
+                max-width: 230px;
+                height: 190px;
+                margin-bottom: 40px;
+                .firs-p{
+                    font-size: 35px;
+                }
+                .first-p-01{
+                    font-size: 23px;
+                }
+            }
+            .sec-box{
+                max-width: 230px;
+                height: 190px;
+                .sec-p{
+                    font-size: 32px;
+                }
+                .sec-p2{
+                    font-size: 22px;
+                }
+            }
+            .therd-box{
+                max-width: 230px;
+                height: 190px;
+                .therd-p{
+                    font-size: 35px;
+                }
+                .therd-p1{
+                    font-size: 22px;
+                }
+            }
+            .forth-box{
+                max-width: 230px;
+                height: 190px;
+                .forth-p{
+                    font-size: 35px;
+                }
+                .forth-p1{
+                    font-size: 19px;
+                }
+            }
+        }
+    }
+}
