create section-03 responsive

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,3 +10,5 @@
 @import './main.scss/section-01-resp.scss';
 @import './main.scss/section-02.scss';
 @import './main.scss/sec-02-resp.scss';
+@import './main.scss/section-03.scss';
+@import './main.scss/section-03-resp.scss';
