--- a/scss/main.scss/section-03.scss
+++ b/scss/main.scss/section-03.scss
@@ -112,6 +112,9 @@
         width: 100%;
         border-radius: 5px;
         background-image: url('../img/dribbble-thumbnail.png');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
         height: 433px;
         padding: 70px;
         transition: all 0.1s linear 0.1s;
@@ -188,5 +191,11 @@
             cursor: pointer;
             margin-top: 100px;
             margin-bottom: 250px;
+            transition: all 0.1s linear 0.2s;
+           &:hover{
+               background: gray;
+               color: #000;
+            -webkit-box-reflect: below 1px linear-gradient(transparent,rgba(255,255,255,0.4));
+           }
     }
 }
