--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,3 +12,4 @@
 @import './main.scss/sec-02-resp.scss';
 @import './main.scss/section-03.scss';
 @import './main.scss/section-03-resp.scss';
+@import './main.scss/section-04.scss';
