--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,3 +13,4 @@
 @import './main.scss/section-03.scss';
 @import './main.scss/section-03-resp.scss';
 @import './main.scss/section-04.scss';
+@import './main.scss/section-04-05-resp.scss';
