--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,3 +14,5 @@
 @import './main.scss/section-03-resp.scss';
 @import './main.scss/section-04.scss';
 @import './main.scss/section-04-05-resp.scss';
+@import './main.scss/footer.scss';
+@import './main.scss/footer-resp.scss';
