--- a/scss/main.scss/footer.scss
+++ b/scss/main.scss/footer.scss
@@ -99,7 +99,7 @@
                 font-size: 15px;
                 transition: all 0.1s linear 0.2s;
                 &:hover{
-                    font-size: 19px;
+                    // font-size: 19px;
                     color: #333333;
                 }
             }
@@ -143,7 +143,7 @@
                 line-height: 20px;
                 transition: all 0.1s linear 0.2s;
                 &:hover{
-                    font-size: 19px;
+                    // font-size: 16px;
                     color: #333333;
                 }
             }
@@ -295,7 +295,7 @@
                 }
             }
             .textarea-wrapper{
-                max-width: 700px;
+                max-width: 680px;
                 width: 100%;
                 margin-top: 50px;
                 .text-area{
@@ -320,7 +320,7 @@
             height: 70px;
             background-color: $color-01;
             color: #fff;
-            margin-top: 65px;
+            margin-top: 69px;
             border-radius: 5px;
             font-family: 'Poppins-regular';
             font-size: 22px;
